# mini-x

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile_mini-x_test  README.md  SecurityAssesment.md  SwarmSetup.sh  Vagrantfile  api_test.py  control.sh  docker-compose-db.yml  docker-compose-dev-min.yml  docker-compose-dev.yml  docker-compose-logging.yml  docker-compose-monitoring.yml  docker-compose-swag.yml  docker-compose.db.yml  docker-compose.yml  featureOverview.txt  filebeat.yml  flag_tool  logs.md  mini-x_tests.py  minitwit.py  minitwit_tests.py  prometheus.yaml  read.md  schema.sql  swag.conf  test.db
.github/workflows/: Publish.yml  app-test.yml  continous-deployment.yml  generate-report.yml  main.yml  publish.yml  quality-check.yml
legacy_python/: minitwit.py
migrations/2024-03-01-122823_init/: up.sql
migrations/2024-03-01-124527_init/: down.sql  up.sql
migrations/2024-03-08-131712_string_dates/: up.sql
migrations/2024-03-14-194820_postgresql/: down.sql  up.sql
migrations/2024-04-12-110500_latest/: down.sql  up.sql
mini-x/: Cargo.toml
report/: report.md
report/diagrams/: Arhitecture Diagram.drawio  component_view.drawio  model_view.drawio  modelview_frontend.drawio  workflows_diagram.drawio
sqlite-to-postgres/: db-re.sh  fix.sql  test.load
src/: lib.rs  main.rs  models.rs  schema.rs  schema.sql
src/api/: api.rs  api_server.rs  api_structs.rs  mod.rs
src/flash_messages/: flash_messages.rs  mod.rs
src/frontend/: client.rs  flash_messages.rs  frontend.rs  mod.rs  template_structs.rs
src/frontend/static/: style.css
templates/: layout.html  login.html  newRegister.html  register.html  simpleTemplate.html  timeline.html
