[package]
name = "mini-x"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.5"
actix-web = "4"
actix-session = { version = "0.9.0", features = ["cookie-session"] }
askama = "0.12.1"
askama_actix = "0.14.0"
chrono = "0.4.34"
filters = "0.4.0"
rusqlite = "0.30.0"
actix-web-flash-messages = { version = "0.4", features = ["cookies"] }
[dependencies.uuid]
version = "1.7.0"
features = [
    "v4",
    "v7",
    "js",
]

uuid = "1.7.0"
