[package]
name = "mini-x"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.5"
actix-web = "4"
actix-session = { version = "0.9.0", features = ["cookie-session"] }
askama = "0.12.1"
askama_actix = "0.14.0"
chrono = {version ="0.4.34", features = ["serde"]}
filters = "0.4.0"
rusqlite = "0.30.0"
actix-web-flash-messages = { version = "0.4", features = ["cookies"] }
serde = "1.0.196"
pwhash = "1"
actix-identity = "0.7.0"
md-5 = "0.10.6"
